lib/tests/fixtures/compiler/parser/return_in_interpolation.baseline
Error: return_in_interpolation.pp:2:5: syntax error: expected '{' but found interpolated string.
  "${ 'foo'.each |$x| { if $x == 'o' { return } $x } }"
  ^
