lib/tests/fixtures/compiler/parser/return_in_interpolation.pp
function foo() {
    "${ 'foo'.each |$x| { if $x == 'o' { return } $x } }"
}
